using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace EnemyStates {
    static class AnimEnemyParameters {

        public static string IDLE = "IDLE";
        public static string RUNNING = "RUNNING";
        public static string ATTACKING = "ATTACKING";
        public static string DAMAGE = "DAMAGE";
        public static string DEATH = "DEATH";
    }
}
